# led-backlighting-controller

./: .embed.toml  .gitignore  Cargo.toml  Embed.toml  README.md  memory.x  openocd.cfg  unbrick-xiao.cfg
.cargo/: config
examples/: button-gpiov1.rs  button-gpiov2.rs  full.rs  input-pin.rs  rainbow.rs  rgb-blinky.rs  rtic-input-pin.rs  string-led-blinky.rs  string-rainbow.rs
kicad/led-backlight/: fp-info-cache  fp-lib-table  led-backlight-cache.lib  led-backlight.csv  led-backlight.kicad_pcb  led-backlight.kicad_pcb-bak  led-backlight.pro  led-backlight.sch  led-backlight.xml  mcu_board.sch  mcu_board.sch-bak  power_and_control_board.sch  sym-lib-table
kicad/led-backlight/led-backlight-controls/: led-backlight-controls-cache.lib  led-backlight-controls.kicad_pcb  led-backlight-controls.sch  led-backlight-controls.step
kicad/led-backlight/plots/: led-backlight-B_Cu.gbl  led-backlight-B_Mask.gbs  led-backlight-B_Paste.gbp  led-backlight-B_SilkS.gbo  led-backlight-Edge_Cuts.gm1  led-backlight-F_Cu.gtl  led-backlight-F_Mask.gts  led-backlight-F_Paste.gtp  led-backlight-F_SilkS.gto  led-backlight-top-pos.csv  led-backlight.drl
src/: main.rs
