[package]
name = "led-backlighting-controller"
version = "0.1.0"
authors = ["Brian Vanderbusch <chief@hackerhappyhour.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "0.6.0-alpha.2"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
rtic-monotonic = "0.1.0-alpha.0"
atsamd-hal = { version = "0.12.0", features = ["samd21g", "rtic"] }
xiao_m0 = "0.9.0"
panic-halt = "0.2.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
atsamd21g = {version = "0.9.0", features = ["rt"]}

[dependencies.rtt-target]
version = "0.3.0"
features = ["cortex-m"]

[patch.crates-io]
atsamd-hal = { path = "../atsamd/hal"}
xiao_m0 = { path = "../atsamd/boards/xiao_m0" }
atsamd21g = { path = "../atsamd/pac/atsamd21g" }

[[bin]]
name = "led-backlighting-controller"
test = false
bench = false
